@startuml

title __PROPPRODUCT's Class Diagram__\n

  namespace com.example.aircraftwar {
    namespace JavaCode.edu.hitsz {
      namespace prop.PropProduct {
        abstract class com.example.aircraftwar.JavaCode.edu.hitsz.prop.PropProduct.BaseProp {
            + BaseProp()
            + BombAction()
            + PropIndex()
            + function1()
        }
      }
    }
  }
  

  namespace com.example.aircraftwar {
    namespace JavaCode.edu.hitsz {
      namespace prop.PropProduct {
        class com.example.aircraftwar.JavaCode.edu.hitsz.prop.PropProduct.BombProp {
            + scoreIncrease : int
            - BulletList : List<BaseBullet>
            - EnemyList : List<BaseEnemy>
            + BombAction()
            + BombProp()
            + PropIndex()
            + addSubscriber()
            + forward()
            + notifyAllSub()
            + removeSubscriber()
        }
      }
    }
  }
  

  namespace com.example.aircraftwar {
    namespace JavaCode.edu.hitsz {
      namespace prop.PropProduct {
        class com.example.aircraftwar.JavaCode.edu.hitsz.prop.PropProduct.FireProp {
            + FireProp()
            + PropIndex()
            + forward()
            + function1()
        }
      }
    }
  }
  

  namespace com.example.aircraftwar {
    namespace JavaCode.edu.hitsz {
      namespace prop.PropProduct {
        class com.example.aircraftwar.JavaCode.edu.hitsz.prop.PropProduct.HpProp {
            + HpProp()
            + PropIndex()
            + forward()
            + function1()
        }
      }
    }
  }
  

  com.example.aircraftwar.JavaCode.edu.hitsz.prop.PropProduct.BaseProp -up-|> com.example.aircraftwar.JavaCode.edu.hitsz.basic.AbstractFlyingObject
  com.example.aircraftwar.JavaCode.edu.hitsz.prop.PropProduct.BombProp -up-|> com.example.aircraftwar.JavaCode.edu.hitsz.prop.PropProduct.BaseProp
  com.example.aircraftwar.JavaCode.edu.hitsz.prop.PropProduct.FireProp -up-|> com.example.aircraftwar.JavaCode.edu.hitsz.prop.PropProduct.BaseProp
  com.example.aircraftwar.JavaCode.edu.hitsz.prop.PropProduct.HpProp -up-|> com.example.aircraftwar.JavaCode.edu.hitsz.prop.PropProduct.BaseProp


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
